sqlite를 이용한 유저목록 저장구현 + 그룹 생성 메시시 전송

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,6 +6,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="사용자 등록 안됨"
+        android:id="@+id/profile"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="페어링된 목록"/>
     <ListView
         android:layout_width="match_parent"
@@ -28,14 +33,15 @@
         android:text="SCAN"
         android:id="@+id/button"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/edit"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="SEND"
+        android:text="더미 프로필 설정"
         android:id="@+id/button2"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="더미 그룹 설정"
+        android:id="@+id/button3"/>
 </LinearLayout>
