--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,45 +3,145 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="사용자 등록 안됨"
-        android:id="@+id/profile"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="페어링된 목록"/>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="#ccccff"
-        android:id="@+id/listview1"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="페어링 안된 목록"/>
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="#ccccff"
-        android:id="@+id/listview2"/>
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="페어링된 목록"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="#ccccff"
+                android:id="@+id/listview1"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="페어링 안된 목록"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:background="#ccccff"
+                android:id="@+id/listview2"/>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SCAN"
         android:id="@+id/button"/>
-
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="더미 프로필 설정"
-        android:id="@+id/button2"/>
-
-    <Button
+        android:text="사용자 등록 안됨"
+        android:id="@+id/profile"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="더미 그룹 설정"
-        android:id="@+id/button3"/>
+        android:orientation="horizontal">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="전화번호"
+            android:id="@+id/edit1"
+            android:singleLine="true" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/edit2"
+            android:hint="이름, 그룹 이름"
+            android:singleLine="true" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="내 정보 변경"
+            android:id="@+id/button2"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="친구 생성"
+            android:id="@+id/button3"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="그룹 생성"
+            android:id="@+id/button4"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="그룹 탈퇴"
+            android:id="@+id/button5"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="그룹에 추가될 친구들"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:id="@+id/listview3"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="저장된 친구들"/>
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:id="@+id/listview4"/>
+
+        </LinearLayout>
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="현재 그룹"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="저장된 그룹목록"/>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listview5"/>
+
 </LinearLayout>
