그룹 생성 저장 탈퇴 로직 구현, 음성채팅 시작, 종료 구현

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -76,25 +76,29 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="내 정보 변경"
             android:id="@+id/button2"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="친구 생성"
             android:id="@+id/button3"/>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="그룹 생성"
             android:id="@+id/button4"/>
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="그룹 탈퇴"
+            android:text="채팅 종료"
             android:id="@+id/button5"/>
     </LinearLayout>
     <LinearLayout
