--- a/app/src/main/res/layout/main_activity_group_list_item.xml
+++ b/app/src/main/res/layout/main_activity_group_list_item.xml
@@ -10,4 +10,10 @@
         android:textColor="@android:color/black"
         android:id="@+id/text_name"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:id="@+id/text_users"/>
+
 </LinearLayout>
